# GoogleTest_Conan_Example

./: .gitlab-ci.yml  CMakeLists.txt  README.md  compile.sh  compile_googletest.sh  conanfile.txt
test/: test_counting_zeros.cpp  test_less_than_zero.cpp
